--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,10 @@
 #
 # @seealso
 # - http://manpages.ubuntu.com/manpages/precise/man1/tmux.1.html
-
+#
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'arcticicestudio/nord-tmux'
 
 # 1. Key Bindings {{{
 # ===================
@@ -23,10 +26,7 @@ setw -g mode-keys vi
 # enable mouse behavior.
 # for this, tmux now captures mouse actions from the terminal.
 # (shift+mouse) will allow us to select the raw texts instead.
-setw -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # some useful <C-a> combinations
 bind-key : command-prompt
@@ -120,7 +120,6 @@ set -g status-left-style "none"
 set -g message-command-style "fg=colour231,bg=colour31"
 set -g status-right-style "none"
 set -g pane-active-border-style "fg=colour254"
-set -g status-utf8 "on"
 set -g status-style "bg=colour234,none"
 set -g message-style "fg=colour231,bg=colour31"
 set -g pane-border-style "fg=colour240"
@@ -167,3 +166,6 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 #bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
 
 # }}}
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
