Add bind-key for tmux kill current session

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,7 @@ bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
 set-window-option -g other-pane-height 25
 set-window-option -g other-pane-width 80
+bind-key X confirm-before "kill-session -t ''"
 
 # vertical/horizontal split
 bind-key v split-window -h
