--- a/tmux.conf
+++ b/tmux.conf
@@ -12,12 +12,11 @@ set -g @plugin 'arcticicestudio/nord-tmux'
 # ===================
 
 # Key combination prefix is <C-a>, not <C-b>
-set-option -g prefix C-a
+set-option -g prefix C-o
 unbind-key C-b
 
 # use <C-a><C-a> to switch window,
 # and <C-a>a to control nested sessions
-bind-key C-a last-window
 bind-key a send-prefix
 
 # enable vi-mode
@@ -36,7 +35,6 @@ bind-key L clear-history
 bind-key space next-window
 bind-key bspace previous-window
 bind-key enter next-layout
-bind-key C-o rotate-window
 
 bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
@@ -56,13 +54,13 @@ bind-key + resize-pane -D 2
 bind-key - resize-pane -U 2
 
 # pane/windows navigation
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-bind-key q display-panes
+# bind-key h select-pane -L
+# bind-key j select-pane -D
+# bind-key k select-pane -U
+# bind-key l select-pane -R
+# bind-key q display-panes
 
-bind-key C-a last-window
+# bind-key C-a last-window
 bind-key c new-window
 bind-key t next-window
 bind-key T previous-window
@@ -158,10 +156,10 @@ set-option -g repeat-time 0
 # =========================
 
 # Smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # I prefer <C-L> as clear screen
 #bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
