회사용으로 업데이트

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,22 +6,22 @@
 #
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'sei40kr/tmux-airline-dracula'
 
 # 1. Key Bindings {{{
 # ===================
 
 # Key combination prefix is <C-a>, not <C-b>
-set-option -g prefix C-a
+set-option -g prefix C-o
 unbind-key C-b
 
 # use <C-a><C-a> to switch window,
 # and <C-a>a to control nested sessions
-bind-key C-a last-window
-bind-key a send-prefix
+bind-key C-o last-window
+bind-key o send-prefix
 
 # enable vi-mode
-setw -g mode-keys vi
+setw -g mode-keys emacs
 
 # enable mouse behavior.
 # for this, tmux now captures mouse actions from the terminal.
@@ -150,6 +150,7 @@ set-option -g repeat-time 0
 
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+set-option -g default-shell /bin/zsh
 
 # }}}
 
